[tool.poetry]
name = "tapisadminutil"
version = "0.1.0"
description = "Utilities for administering Tapis installations"
authors = ["Joe Stubbs <joestubbs5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
ipython = "^8.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
